k8s-deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lobby-deployment
  labels:
    app: lobby
spec:

  # Recreate to save pod space and avoid scheduling failure when testing.
  strategy:
    type: Recreate

  replicas: 1
  selector:
    matchLabels:
      app: lobby
  template:
    metadata:
      labels:
        app: lobby
    spec:
      containers:
        - name: my-container
          image: ${CONTAINER_REGISTRY}/${IMAGE_NAMESPACE}/${IMAGE_NAME}:${IMAGE_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"  # Minimum memory required by the container
              cpu: "100m"     # Minimum CPU (0.5 cores) required by the container
            limits:
              memory: "1Gi"   # Maximum memory the container can use
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ${K8S_SERVICE_NAME}
spec:
  type: ClusterIP
  selector:
    app: lobby
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-alb-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: ${K8S_INGRESS_GROUP_NAME}
    alb.ingress.kubernetes.io/use-regex: "true"
    alb.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: ${K8S_INGRESS_PATH}
            pathType: Prefix
            backend:
              service:
                name: ${K8S_SERVICE_NAME}
                port:
                  number: 8080
